# theboard

./: .gitignore  pyproject.toml
theboard/: config.py  discussion.py  main.py  messages.py  pubsub.py
theboard/board/: build.py  members.py  model.py
theboard/templates/: index.html
